refs #2036 Add code to deal with Java version update incompatible changes.